--- a/GoogleUltra/packages.config
+++ b/GoogleUltra/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Google.Music.Api" version="1.0.0.20" targetFramework="net461" />
+  <package id="NAudio" version="1.9.0-preview2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
 </packages>
