playing music from radio and google music

--- a/GoogleUltra/GoogleUltra.csproj
+++ b/GoogleUltra/GoogleUltra.csproj
@@ -82,6 +82,8 @@
     <Compile Include="GoogleUltraBootstrapper.cs" />
     <Compile Include="Models\CurrentTrackModel.cs" />
     <Compile Include="MusicPlayer\IMusicPlayer.cs" />
+    <Compile Include="MusicPlayer\BasicMusicPlayer.cs" />
+    <Compile Include="MusicPlayer\MusicSource.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Radio\CurrentTrackDto.cs" />
     <Compile Include="Radio\IRadioSettings.cs" />
